Bug 1577862 - Websockets should prioritize SOCKS5 proxies over HTTP(S) proxies, r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D47105

--HG--
extra : moz-landing-system : lando